# security_piscine

./: .gitignore
00_Arachnida/: README.md  Scorpion.py  Spider.py  requirements.txt
01_ft_otp/: Hotp.py  README.md  ft_otp.py  main.py  requirements.txt
02_ft_onion/: README.md  index.html  nginx.conf  sshd_config  torrc
04_Stockholm/: Makefile  README.md  test.sh
04_Stockholm/includes/: encryption.h  utils.h
04_Stockholm/src/: decryption.c  encryption.c  main.c  utils.c
05_IronDome/: Dockerfile  README.md  iron_dome.py  requirements.txt  test.py
05_IronDome/includes/: irondome.h  irondome.hpp
05_IronDome/src/: irondome.cpp  main.cpp
05_IronDome/test/: openssl_cmd.sh
05_IronDome/test/Stockholm/: README.md
05_IronDome/test/Stockholm/includes/: encryption.h
05_IronDome/test/Stockholm/src/: encryption.c
06_Inquisitor/: Dockerfile  Makefile  README.md  docker-compose.yaml
06_Inquisitor/includes/: inquisitor.hpp
06_Inquisitor/src/: main.cpp
06_Inquisitor/test/: ftp_server.py  test.sh
07_Vaccine/: Cargo.toml  Makefile  README.md  docker_compose.yml
07_Vaccine/src/: cli.rs  detection.rs  extractor.rs  http.rs  main.rs  models.rs  scanner.rs  storage.rs
07_Vaccine/src/injections/: boolean_based.rs  error_based.rs  mod.rs  time_based.rs
