[package]
name = "vaccine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vaccine"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
